--- a/client/src/style.css
+++ b/client/src/style.css
@@ -55,7 +55,7 @@ img{
 /* ||HEADER */
 #main-header{
     background-color: #fff;
-    /* min-height: 100vh; */
+    min-height: 100vh;
     overflow: hidden;
 }
 
@@ -198,17 +198,18 @@ img{
 
 /* HERO SECTION */
 .hero-section{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)) ,url(../../client/src/assets/hero-1.JPG);
-    background-size: cover;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)) ,url(./img/hero-1.JPG);
+    
+    /* background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
-    min-height: 82vh;
+    background-repeat: no-repeat; */
+    /* min-height: 82vh; */
 
-    display: flex;
+    /* display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    position: relative;
+    position: relative; */
 }
 
 .hero-text{
@@ -248,20 +249,11 @@ img{
 
 
 /* ABOUT US SECTION */
-.aboutDetails{
-display: grid;
-grid-template-columns: repeat(3,1fr);
-align-items: center;
-justify-content: center;
-grid-gap: 40px;
-text-align: center;
-}
-
-
 .about-us{
     padding: 100px 100px;
     background-color: #fff;
     color: #000;
+
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 40px;
@@ -328,12 +320,12 @@ text-align: center;
 
 
 /* upcoming event section */
-.upcoming-events-section{
+/* .upcoming-events-section{
     width: 100%;
     padding: 70px 100px;
     padding-left: 200px;
     margin-bottom: 70px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)) ,url(./img/Adventist\ melody.JPG);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -352,4 +344,4 @@ text-align: center;
     font-size: 20px;
     font-weight: 400;
     margin: 20px 0 40px 0;
-}
+} */
